tests/paczka1/fuzzy1/16489992.err
Error in line 4: r8r2pP S746 35,5
Error in line 6: cVxTv9R5ifY S746 86,1
Error in line 9: L6m S65 69,7
Error in line 7: YSgxqV A65 31,1
Error in line 10: cVxTv9R5ifY A65 80,6
Error in line 23: 0gpRYau3 A65 35,7
Error in line 32: Kerj A65 .4,0
Error in line 36: 0gpRYau3 S746 34,4
